--- a/AngularJSWorkshop/package.json
+++ b/AngularJSWorkshop/package.json
@@ -34,6 +34,7 @@
     "angular-messages": "~1.5.6",
     "angular-resource": "~1.5.6",
     "angular-ui-router": "~0.3.1",
+    "angular-visor": "^0.1.2",
     "normalize.css": "^4.1.1"
   }
 }
